CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
PROJECT(ws2812-spi)

# compiler options. (we only check for gcc)
if (${CMAKE_COMPILER_IS_GNUCC})
  set(OPTIMIZE_FLAGS "-O3")

  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OPTIMIZE_FLAGS} -g3 -Wall -Werror")
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 ${OPTIMIZE_FLAGS} -g3 -Wall -Werror")
endif()

ADD_SUBDIRECTORY(ws2812)
ADD_SUBDIRECTORY(bin)
ADD_SUBDIRECTORY(tests)
ADD_SUBDIRECTORY(benchmarks)

ADD_SUBDIRECTORY(googletest)
ADD_SUBDIRECTORY(googlebenchmark)
